--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,147 @@
 @charset "utf-8";
-* {
-  color: green;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "맑은 고딕";
 }
-ul {
-  background-color: mistyrose;
+
+ul,
+li,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-#today > span {
-  color: red;
+
+header {
+  width: 1100px;
+  height: 100px;
+  margin: 0 auto;
+  background-color: #ffffff;
 }
-/* .list {
-color: blue;
-}*/
-/* ul span { 
-background-color: yellow;
-*/
-p > span {
-  color: black;
+
+#logo {
+  float: left;
+  width: 130px;
+  height: 70px;
+  margin: 10px 0 0 10px;
+  background-color: #ffffff;
 }
-li:hover {
-  background-color: yellowgreen;
+
+nav {
+  width: 740px;
+  height: 30px;
+  float: right;
+  background-color: #ffffff;
+  margin: 30px 30px 0 0px;
 }
-li:nth-child(1) {
-  color: red;
+
+nav ul {
+  font-family: "Arial";
+  font-weight: bold;
 }
-li:nth-child(even) {
-  color: black;
+
+nav ul li {
+  float: left;
+  padding: 0 20px;
 }
-div {
-  background-color: yellow;
-  border: 1px solid grey;
-  margin: 20px auto;
-  padding: 10px;
+
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
+nav ul a:hover {
+  background-color: #fff;
+  color: #666;
+}
+
+#slider {
+  width: 1100px;
+  height: 450px;
+  margin: 0 auto;
+  background-color: #ffffff;
+}
+
+section {
+  width: 1100px;
+  margin: 0 auto;
+  height: 280px;
+  background-color: #ffffff;
+}
+
+article {
+  width: 340px;
+  height: 145px;
+  float: left;
+  margin: 30px 10px;
+  background-color: #ffffff;
+}
+
+article h3 {
+  margin: 0;
+  font-size: 16px;
+  height: 30px;
+  width: 100%;
+}
+
+article img {
+  float: left;
+  margin: 0 10px 0 0px;
+}
+
+article h4 {
+  margin: 0;
+  font-size: 14px;
+  height: 30px;
+}
+
+article p {
+  font-family: "돋움";
+  font-size: 12px;
+  color: #666;
+}
+
+article .icon {
+  width: 100px;
+  height: 75px;
+  float: left;
+  margin: 0 0 0 5px;
+  background-color: white;
+  text-align: center;
+}
+
+article .icon img {
+  float: left;
+  margin: 0 0 0 20px;
+}
+
+article .icon span {
+  width: 100%;
+  text-align: center;
+  float: left;
+  font-size: 12px;
+  margin: 10px 0 0 0px;
+  display: block;
+}
+
+footer {
+  width: 1100px;
+  height: 100px;
+  background-color: #ffffff;
+  margin: 0 auto;
+}
+
+footer img {
+  float: left;
+  margin: 20px 0 0 20px;
+}
+
+footer p {
+  font-family: "돋움";
+  font-size: 12px;
+  color: #666;
+  margin: 40px 100px 0 0px;
+  float: right;
+  background-color: #ffffff;
 }
